--- a/Online-Photobooth-master/main.css
+++ b/Online-Photobooth-master/main.css
@@ -13,19 +13,41 @@
   display: block;
 }
 
+#curtain{
+  background-color: black;
+  position: fixed;
+  top: 45%;
+  left: 50%;
+  margin-left: -1000px;
+  margin-top: -800px;
+  width: 2000px;
+  height: 1500px;
+
+
+
+}
+
+
+
 body {
+  /* background-image: url("images/curtain.png");
+  background-repeat: no-repeat;
+  background-position: fixed;
+  background-size: cover;
+  back */
+  background-color: darkred;
+
   position: fixed;
   text-align: center;
 border: 0px solid red;
 margin-right: 65em;
-background-color: #0047AB;
   color: #eee;
   rgb(247, 217, 255)
 }
 
 h1 {
   position: fixed;
-  top: 50%;
+  top: 65%;
   left: 50%;
   margin-top: -750px;
   margin-left: -140px;
@@ -38,24 +60,25 @@ h1 {
 
 #fred {
   position: fixed;
-  top: 75%;
+  top: 50%;
   left: 50%;
-  margin-top: 85px;
+  margin-top: 125px;
   margin-left: -160px;
 }
 
 #fred2 {
 position: fixed;
-top: 10%;
+top: 25%;
 left: 50%;
-margin-top: 10px;
+margin-top: -10px;
 margin-left: -205px;
 /* border: 1px solid red; */
 }
 
 #video {
+  /* <img src="images/camera.jpg"> */
   position: fixed;
-  top: 35%;
+  top: 50%;
   left: 50%;
   margin-top: -270px;
   margin-left: -250px;
@@ -71,9 +94,9 @@ margin-left: -205px;
 
 #photo {
   position: fixed;
-  top: 75%;
+  top: 85%;
   left: 50%;
-  margin-top: -200px;
+  margin-top: -250px;
   margin-left: -250px;
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
@@ -100,7 +123,7 @@ margin-left: -205px;
 }
 
 button, #downloadButton {
-  background-color: rgba(240, 0, 230, 0.5);
+  background-color: rgba(240, 2, 50, 0.5);
   border: px solid rgba(255, 255, 255, 0.7);
   box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
   font-size: 14px;
@@ -117,7 +140,7 @@ button, #downloadButton {
   margin-right: 255px;
   bottom: 50px; */
   position: fixed;
-  top: 35%;
+  top: 50%;
   left: 50%;
   margin-top: 40px;
   margin-left: -250px;
@@ -142,27 +165,28 @@ section{
 }
 
 #startMixingButton {
-  background-color: #3E94B3;
-  padding: 0.5em;
-  /* color: white;
-  text-decoration: none;
-  margin-left: 1em;
-  margin-bottom: 2em;
-  border: 1px solid red; */
+  /* display: flex;
+  flex-wrap: wrap;
+  margin-left: 500px;
+  margin-right: 255px;
+  bottom: 50px; */
   position: fixed;
-  top: 81%;
+  top: 82%;
   left: 50%;
-  margin-top: 40px;
+  margin-top: 95px;
   margin-left: -250px;
+
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
   width: 480px;
   height: 50px;
+  /* margin-left: 400px; */
+  /* help with camera reversal */
 }
 
 #downloadButton{
   position: fixed;
-  top: 50%;
+  top: 60%;
   left: 50%;
   margin-top: 350px;
   margin-left: 230px;
@@ -176,7 +200,7 @@ section{
 
 #returnButton{
   position: fixed;
-  top: 50%;
+  top: 60%;
   left: 50%;
   margin-top: 350px;
   margin-left: -300px;
@@ -191,7 +215,7 @@ section{
 /* ------------------- */
 #canvasMixArea {
   position: fixed;
-  top: 75%;
+  top: 85%;
   left: 35%;
   margin-top: -750px;
   margin-left: -140px;
@@ -199,5 +223,10 @@ section{
 
 #c {
   background-image: url('images/checker.png');
+
+}
+
+
+
 
 }
