final changes -layer buttons -color buttons -center items

--- a/Online-Photobooth-master/main.css
+++ b/Online-Photobooth-master/main.css
@@ -48,7 +48,7 @@ margin-right: 65em;
 h1 {
   position: fixed;
   top: 65%;
-  left: 50%;
+  left: 53%;
   margin-top: -750px;
   margin-left: -140px;
 
@@ -61,14 +61,14 @@ h1 {
 #fred {
   position: fixed;
   top: 50%;
-  left: 50%;
+  left: 48%;
   margin-top: 125px;
   margin-left: -160px;
 }
 
 #fred2 {
 position: fixed;
-top: 25%;
+top: 27%;
 left: 50%;
 margin-top: -10px;
 margin-left: -205px;
@@ -122,8 +122,8 @@ margin-left: -205px;
   background-color: black
 }
 
-button, #downloadButton {
-  background-color: rgba(240, 2, 50, 0.5);
+#downloadButton {
+  background-color: rgba(255, 2, 50, 0.5);
   border: px solid rgba(255, 255, 255, 0.7);
   box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
   font-size: 14px;
@@ -134,11 +134,14 @@ button, #downloadButton {
 }
 
 #startButton {
-  /* display: flex;
-  flex-wrap: wrap;
-  margin-left: 500px;
-  margin-right: 255px;
-  bottom: 50px; */
+  background-color: rgba(255, 2, 50, 0.5);
+  border: px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  color: rgba(255, 255, 255, 1.0);
+  padding: 0.5em;
+  border-radius: 0.5em;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -165,11 +168,14 @@ section{
 }
 
 #startMixingButton {
-  /* display: flex;
-  flex-wrap: wrap;
-  margin-left: 500px;
-  margin-right: 255px;
-  bottom: 50px; */
+  background-color: rgba(255, 2, 50, 0.5);
+  border: px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  color: rgba(255, 255, 255, 1.0);
+  padding: 0.5em;
+  border-radius: 0.5em;
   position: fixed;
   top: 82%;
   left: 50%;
@@ -187,7 +193,7 @@ section{
 #downloadButton{
   position: fixed;
   top: 60%;
-  left: 50%;
+  left: 54%;
   margin-top: 350px;
   margin-left: 230px;
   border: 1px solid black;
@@ -199,6 +205,14 @@ section{
 }
 
 #returnButton{
+  background-color: rgba(255, 2, 50, 0.5);
+  border: px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  color: rgba(255, 255, 255, 1.0);
+  padding: 0.5em;
+  border-radius: 0.5em;
   position: fixed;
   top: 60%;
   left: 50%;
@@ -212,11 +226,54 @@ section{
 
 }
 
+#backButton{
+  background-color: rgba(50, 200, 50, 0.5);
+  border: px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  color: rgba(255, 255, 255, 1.0);
+  padding: 0.5em;
+  border-radius: 0.5em;
+  position: fixed;
+  top: 81%;
+  left: 48%;
+  margin-top: 50px;
+  margin-left: -50px;
+  border: 1px solid black;
+  box-shadow: 2px 2px 3px black;
+  width: 150px;
+  height: 35px;
+
+}
+
+#forwardButton{
+  background-color: rgba(50, 200, 50, 0.5);
+  border: px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  font-family: "Lucida Grande", "Arial", sans-serif;
+  color: rgba(255, 255, 255, 1.0);
+  padding: 0.5em;
+  border-radius: 0.5em;
+  position: fixed;
+  top: 81%;
+  left: 58%;
+  margin-top: 50px;
+  margin-left: -50px;
+  border: 1px solid black;
+  box-shadow: 2px 2px 3px black;
+  width: 150px;
+  height: 35px;
+
+
+}
+
 /* ------------------- */
 #canvasMixArea {
   position: fixed;
   top: 85%;
-  left: 35%;
+  left: 43%;
   margin-top: -750px;
   margin-left: -140px;
 }
