--- a/Online-Photobooth-master/main.css
+++ b/Online-Photobooth-master/main.css
@@ -35,7 +35,7 @@ body {
   background-position: fixed;
   background-size: cover;
   back */
-  background-color: darkred;
+  background-color: white;
 
   position: fixed;
   text-align: center;
