--- a/Online-Photobooth-master/main.css
+++ b/Online-Photobooth-master/main.css
@@ -160,7 +160,7 @@ margin-left: -205px;
 section{
   font-size: 16px;
   font-family: "Lucida Grande", "Arial", sans-serif;
-  width: 800px;
+   /* width: 800px; */
 }
 
 #cameraContentarea {
